compiler-core/src/go/tests/snapshots/gleam_core__go__tests__case__multi_subject_or.snap
---
source: compiler-core/src/go/tests/case.rs
expression: "\nfn go(x, y) {\n  case x, y {\n    True, _ | _, True -> 1\n    _, _ -> 0\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go(x, y) {
  case x, y {
    True, _ | _, True -> 1
    _, _ -> 0
  }
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ(x gleam_P.Bool_t, y gleam_P.Bool_t) gleam_P.Int_t {
  if x {
    return 1
  } else if y {
    return 1
  } else {
    return 0
  }
}
